--- a/src/editor/codemirror/popup.css
+++ b/src/editor/codemirror/popup.css
@@ -22,7 +22,7 @@
   z-index: 1;
   bottom: 20px;
   left: 50%;
-  margin-left: -80px;
+  margin-left: -90px;
 }
 
 /* Popup arrow */
@@ -39,10 +39,15 @@
 
 .cm-popup .show {
   visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
 }
 
+.cm-popup-opener {
+  border: 1px solid black;
+  border-radius: 1em;
+  width:0.75em;
+  height:0.75em;
+
+}
 
 
 .cm-popup-btn {
@@ -57,12 +62,26 @@
 
 .cm-popup-submit {
   border: 1px solid black;
-  background-color: white;
+  background-color: #00000040;
+  color: white;
   margin-right: 1em;
+  width: 5em;
+  border-radius: 1em;
+  font-family: "arial";
+}
+
+.cm-popup-level {
+  font-family: "arial";
+  color: white;
+  background-color: #00000040;
+}
+
+.cm-popup-level option {
+  background-color: #000000c0;
 }
 
 .cm-popup-spacer {
-  width: 1em;
+  width: 0.25em;
 }
 
 .cm-popup-btn-0 {
